--- a/index.html
+++ b/index.html
@@ -2,29 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello World</title>
+        <title>Connect Four</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="pixi.js"></script>
     </head>
-    <script src="pixi.min.js"></script>
     <body>
-        <script type="text/javascript">
-            var type = "WebGL"
-            if(!PIXI.utils.isWebGLSupported()){
-                type = "canvas"
-            }
-            PIXI.utils.sayHello(type)
-            
-            //Create the renderer
-            var renderer = PIXI.autoDetectRenderer(256, 256);
-
-            //Add the canvas to the HTML document
-            document.body.appendChild(renderer.view);
-
-            //Create a container object called the `stage`
-            var stage = new PIXI.Container();
-
-            //Tell the `renderer` to `render` the `stage`
-            renderer.render(stage);
-        
-        </script>
+        <div id="display"></div>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
