--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Connect Four</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
         <link rel="stylesheet" href="style.css">
-        <script src="pixi.js"></script>
     </head>
     <body>
         <div id="display"></div>
+        <script src="pixi.js"></script>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
